--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="libs/fontawesome-free-6.4.0-web/css/all.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="icon" href="assets/img/favicon.png" type="image/png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <title>index</title>
 </head>
